--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,8 @@ body {
     text-wrap: balance;
   }
 }
+@layer components {
+  .btn-primary {
+    @apply bg-primary text-white hover:bg-primary-light
+  }
+}
