--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,12 @@ body {
 }
 @layer components {
   .btn-primary {
-    @apply bg-primary text-white hover:bg-primary-light
+    @apply bg-primary text-white hover:bg-primary-light rounded-full px-5 py-3 font-medium font-bold;
+  }
+  .btn-secondary {
+    @apply bg-neutral-lightestGray text-primary hover:bg-neutral-lightGray rounded-full px-5 py-3 font-medium font-bold;
+  }
+  .btn-destructive {
+    @apply bg-accent-red text-white hover:bg-accent-lightRed rounded-full px-5 py-3 font-medium font-bold;
   }
 }
